# validator

./: .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: build-dev.yaml  build-release.yaml  ci-pr.yaml  ci.yml  python-publish.yml  release.yml
evsvalidator/: cli.py  helpers.py  validator.py  version.py
notebooks/: spark-fastjsonschema.ipynb
opentargets_validator/: cli.py  helpers.py  validator.py  version.py
opentargets_validator/resources/: logging.ini
scripts/: bump_version.py
tests/: test_minimal.py
tests/resources/: minimal.data.json  minimal.enum.incorrect.json  minimal.field.incorrect.json  minimal.incorrect.json  minimal.pattern.incorrect.json  minimal.required.incorrect.json  minimal.schema.json
